# muesliswap-onchain-governance

./: .gitignore  README.md  bump_ogmios.sh  pyproject.toml
keys/: scripts.addr  scripts.test_addr  scripts.vkey  vault_admin.addr  vault_admin.test_addr  vault_admin.vkey
muesliswap_onchain_governance/: build.py  submit_ref_script.py
muesliswap_onchain_governance/api/: chain_querier.py  config.py  db_querier.py  ogmios.py  server.py  util.py
muesliswap_onchain_governance/api/db_models/: __init__.py  db.py  gov_state.py  licenses.py  staking.py  tally_state.py  treasury.py
muesliswap_onchain_governance/api/db_queries/: __init__.py  gov_state.py  staking.py  tally.py  treasury.py  util.py
muesliswap_onchain_governance/api/tx_processor/: __init__.py  from_db.py  gov_state.py  licenses.py  staking.py  tally.py  to_db.py  treasury.py
muesliswap_onchain_governance/keys/: vault_admin.addr  vault_admin.test_addr  vault_admin.vkey
muesliswap_onchain_governance/offchain/: init_gov_tokens.py  util.py
muesliswap_onchain_governance/offchain/gov_state/: create_tally.py  init.py  upgrade.py
muesliswap_onchain_governance/onchain/: auth_nft.py  free_mint.py  gov_nft.py  gov_state.py  governance.py  one_shot_nft.py  stake_nft.py  staking.py  util.py
muesliswap_onchain_governance/utils/: contracts.py  from_script_context.py  network.py  to_script_context.py
report/: Makefile  audit.tex  main.tex  references.bib
test/offchain/: test_submit_ref_script.py  util.py
test/offchain/tally/: test_add_vote.py  (+4 more)
test/onchain/: test_interval.py  test_licenses.py  test_util.py
(+40 files in other folders)
